--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,14 @@ svg {
   GEAR
 --------------------------- */
 
+.gear-icon {
+  transition: transform .4s ease-out;
+  transform-origin: 50% 50%;
+}
+
+.gear:hover .gear-icon {
+  transform: rotate(45deg) scale(1.3);
+}
 
 /* --------------------------
   HAMMER
