--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,10 @@ svg {
   HEART
 --------------------------- */
 
+.heart:hover .heart-icon {
+  transform: rotate(45deg) scale(1.3);
+}
+.heart-icon {
+  transition: transform .4s ease-out;
+
+}
